fixed overflow to remove bottom scrollbar

--- a/src/components/listings/listings.css
+++ b/src/components/listings/listings.css
@@ -17,7 +17,7 @@
 
 .card-content-container {
     display: grid;
-    margin-top: 15px;
+    margin-top: 12px;
     grid-template-columns: 1fr 0.2fr;
     grid-template-rows: repeat(4, 1fr);
     grid-column-gap: 8px;
